[PeerTube] Migrate stream extractors to new Stream API